updated project list

--- a/index.html
+++ b/index.html
@@ -352,6 +352,21 @@
                                 </svg>
                             </i></a>
                     </span>
+                    <!-- Klaviyo -->
+                    <span class="skill p-1" data-toggle="tooltip" data-placement="bottom" data-html="true"
+                        title="<em>Klaviyo</em>"><a href="https://klaviyo.com/" target="_blank" rel="noopener noreferrer"
+                            aria-label="Klaviyo">
+                            <i class="icon-klaviyo">
+                                <?xml version="1.0" encoding="utf-8"?>
+                                <svg xmlns="http://www.w3.org/2000/svg" height="22" viewBox="0 0 49 49">
+
+                                    <style>
+                                        .klaviyoSVG{fill:var(--gray);}
+                                    </style>
+                                    <path class="klaviyoSVG" d="M1.2825,14.8186,22.5482.7309a2.9688,2.9688,0,0,1,2.9853,0L46.7992,14.8186a1.6962,1.6962,0,0,1,0,3.0523l-2.8511,1.8784a23.58,23.58,0,0,0-39.8481,0L1.2489,17.8709A1.7063,1.7063,0,0,1,1.2825,14.8186Zm22.7416-.1677A17.8048,17.8048,0,0,0,8.9972,22.9693l4.8971,3.2536a11.7892,11.7892,0,0,1,20.1924,0l4.8972-3.2536A17.56,17.56,0,0,0,24.0241,14.6509Zm0,11.7733a6.0222,6.0222,0,0,0-5.1991,3.0523l3.2872,2.1467a2.9793,2.9793,0,0,0,1.9119.7044,2.9124,2.9124,0,0,0,1.9119-.7044l3.2871-2.1467A5.9672,5.9672,0,0,0,24.0241,26.4242Z"></path>
+                                </svg>
+                            </i></a>
+                    </span>
 
                     <!-- Bubble -->
                     <!-- <span class="skill p-1" data-toggle="tooltip" data-placement="bottom" data-html="true"
@@ -692,9 +707,9 @@
                             code</a>
                     </li>
                     <li>
-                        <a href="https://ze-primer.netlify.app/" id="project9" class="projectLink" target="_blank"
-                            rel="noopener noreferer">Primer (HTML Email)</a>
-                        <a href="https://github.com/zaynejaz/HTMLEmail-Primer" id="codeLink9" class="codeLink pr-3 mr-5"
+                        <a href="https://zaynejaz.github.io/klaviyo/" id="project9" class="projectLink" target="_blank"
+                            rel="noopener noreferer">Andrea Iyamah (HTML Email)</a>
+                        <a href="https://github.com/zaynejaz/klaviyo/blob/master/index.html" id="codeLink9" class="codeLink pr-3 mr-5"
                             target="_blank" rel="noopener noreferer">view
                             code</a>
                     </li>
