--- a/index.html
+++ b/index.html
@@ -662,13 +662,13 @@
                         <!-- <a href="#" id="codeLink1" class="codeLink float-right pr-3 mr-5" target="_blank" rel="noopener noreferer" >view code</a> -->
                     </li>
                     <li>
-                        <a href="https://www.derentedarik.com/" id="project2" class="projectLink" target="_blank"
-                            rel="noopener noreferer">Deren Tedarik (Ecommerce Store)</a>
+                        <a href="https://www.bubu-island.com/" id="project2" class="projectLink" target="_blank"
+                            rel="noopener noreferer">Bubu Island (Booking Website)</a>
                         <!-- <a href="#" id="codeLink2" class="codeLink float-right pr-3 mr-5" target="_blank" rel="noopener noreferer"></a> -->
                     </li>
                     <li>
-                        <a href="https://nazaysutciftligi.com/" id="project3" class="projectLink" target="_blank"
-                            rel="noopener noreferer">Nazay Süt Çiftliği (Website)</a>
+                        <a href="https://clubvet.com.tr/" id="project3" class="projectLink" target="_blank"
+                            rel="noopener noreferer">Clubvet (Website)</a>
                         <!-- <a href="#" id="codeLink3"class="codeLink float-right pr-3 mr-5" target="_blank" rel="noopener noreferer"></a> -->
                     </li>
                     <li>
