added links to html emails

--- a/index.html
+++ b/index.html
@@ -1545,60 +1545,60 @@
                         <a href="https://zaynejaz.github.io/MailerLite/" class="codeLink" target="_blank" rel="noopener noreferer">view exhibition</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Altassian</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-altassianGit/" class="projectLink" target="_blank" rel="noopener noreferer">Altassian</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-altassianGit" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Design Modo</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-designModoBlackFriday/" class="projectLink" target="_blank" rel="noopener noreferer">Design Modo</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-designModoBlackFriday" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Disney+ | Black Widow</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-disneyBlackWidow/" class="projectLink" target="_blank" rel="noopener noreferer">Disney+ | Black Widow</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-disneyBlackWidow" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Disney+ | Subscription</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-disneySubscription/" class="projectLink" target="_blank" rel="noopener noreferer">Disney+ | Subscription</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-disneySubscription" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">F1 TV - Pro</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-f1TvPro/" class="projectLink" target="_blank" rel="noopener noreferer">F1 TV - Pro</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-f1TvPro" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Ferrari Store</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-ferrariGifts/" class="projectLink" target="_blank" rel="noopener noreferer">Ferrari Store</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-ferrariGifts" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Ferrari: Newsletter November</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-ferrariNewsNov/" class="projectLink" target="_blank" rel="noopener noreferer">Ferrari: Newsletter November</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-ferrariNewsNov" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Google Store</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-googleBlackFriday/" class="projectLink" target="_blank" rel="noopener noreferer">Google Store</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-googleBlackFriday" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Google Domains</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-googleDomains/" class="projectLink" target="_blank" rel="noopener noreferer">Google Domains</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-googleDomains" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Louie Spencer: Masterclass</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-louiespenceMasterclass/" class="projectLink" target="_blank" rel="noopener noreferer">Louie Spencer: Masterclass</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-louiespenceMasterclass" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">MacPaw: CleanMyMac X</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-macpawDiscover/" class="projectLink" target="_blank" rel="noopener noreferer">MacPaw: CleanMyMac X</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-macpawDiscover" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">MetaLab</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-metalabQuaterly/" class="projectLink" target="_blank" rel="noopener noreferer">MetaLab</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-metalabQuaterly" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">MeUndies: Reciept</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-meUndiesThankYou/" class="projectLink" target="_blank" rel="noopener noreferer">MeUndies: Reciept</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-meUndiesThankYou" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Microsoft</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-microsoftROI/" class="projectLink" target="_blank" rel="noopener noreferer">Microsoft</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-microsoftROI" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer">National Geographic: Halloween</a>
