added html email links

--- a/index.html
+++ b/index.html
@@ -1601,24 +1601,24 @@
                         <a href="https://github.com/zaynejaz/htmlemail-microsoftROI" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">National Geographic: Halloween</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-natGeoHalloween/" class="projectLink" target="_blank" rel="noopener noreferer">National Geographic: Halloween</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-natGeoHalloween" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">National Geographic: Inspire</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-natGeoInspire/" class="projectLink" target="_blank" rel="noopener noreferer">National Geographic: Inspire</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-natGeoInspire" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Netflix | Coming Soon</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-netflixComingSoon/" class="projectLink" target="_blank" rel="noopener noreferer">Netflix | Coming Soon</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-netflixComingSoon" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Netflix | Kids</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-netflixKids/" class="projectLink" target="_blank" rel="noopener noreferer">Netflix | Kids</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-netflixKids" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">PlayStation | Wrap Up</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-playstationWrapUp/" class="projectLink" target="_blank" rel="noopener noreferer">PlayStation | Wrap Up</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-playstationWrapUp" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Under Armour: Train Harder</a>
