added html email links

--- a/index.html
+++ b/index.html
@@ -1621,20 +1621,20 @@
                         <a href="https://github.com/zaynejaz/htmlemail-playstationWrapUp" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Under Armour: Train Harder</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-underarmourTraining/" class="projectLink" target="_blank" rel="noopener noreferer">Under Armour: Train Harder</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-underarmourTraining" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">Under Armour: Welcome</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-underarmourWelcome/" class="projectLink" target="_blank" rel="noopener noreferer">Under Armour: Welcome</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-underarmourWelcome" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                         <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">YouTube</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-youtubeGoogleOne/" class="projectLink" target="_blank" rel="noopener noreferer">YouTube + Google One</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-youtubeGoogleOne" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                         </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer">YouTube Music</a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/htmlemail-youtubeMusic/" class="projectLink" target="_blank" rel="noopener noreferer">YouTube Music</a>
+                        <a href="https://github.com/zaynejaz/htmlemail-youtubeMusic" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                 </ul>
             </div>
