--- a/index.html
+++ b/index.html
@@ -1736,6 +1736,38 @@
                         <a href="https://ze-webapps.netlify.app/js%20web%20app-text%20analyzer%20-%20searcher/searcher" class="projectLink" target="_blank" rel="noopener noreferer">SearchR</a>
                         <a href="https://github.com/zaynejaz/WebApps/tree/master/JS%20Web%20App-Text%20Analyzer%20-%20SEARCHER" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
+                    <li>
+                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
+                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                    </li>
+                    <li>
+                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
+                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                    </li>
+                    <li>
+                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
+                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                    </li>
+                    <li>
+                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
+                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                    </li>
+                    <li>
+                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
+                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                    </li>
+                    <li>
+                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
+                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                    </li>
+                    <li>
+                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
+                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                    </li>
+                    <li>
+                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
+                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                    </li>
                 </ul>
             </div>
             <div class="modal-footer">
