--- a/index.html
+++ b/index.html
@@ -1717,7 +1717,7 @@
             <div class="modal-body">
                 <ul>
                     <li>
-                        <a href="#" class="projectLink" target="_blank" rel="noopener noreferer">Random Quote Generator</a>
+                        <a href="https://zaynejaz.github.io/randomQuoteGenerator/" class="projectLink" target="_blank" rel="noopener noreferer">Random Quote Generator</a>
                         <a href="https://github.com/zaynejaz/randomQuoteGenerator" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
