added voice budget tracker

--- a/index.html
+++ b/index.html
@@ -1737,8 +1737,8 @@
                         <a href="https://github.com/zaynejaz/WebApps/tree/master/JS%20Web%20App-Text%20Analyzer%20-%20SEARCHER" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://ze-arithmetica.netlify.app/" class="projectLink" target="_blank" rel="noopener noreferer">Voice Budget Tracker</a>
+                        <a href="https://github.com/zaynejaz/react-budget-tracker" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
