added to do list

--- a/index.html
+++ b/index.html
@@ -1741,8 +1741,8 @@
                         <a href="https://github.com/zaynejaz/react-budget-tracker" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/react-todo-list-app/" class="projectLink" target="_blank" rel="noopener noreferer">To-Do List</a>
+                        <a href="https://github.com/zaynejaz/react-todo-list-app" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
