added currency converter

--- a/index.html
+++ b/index.html
@@ -1745,8 +1745,8 @@
                         <a href="https://github.com/zaynejaz/react-todo-list-app" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/react-calculator/" class="projectLink" target="_blank" rel="noopener noreferer">Calculator</a>
+                        <a href="https://github.com/zaynejaz/react-calculator" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
