--- a/index.html
+++ b/index.html
@@ -1749,8 +1749,8 @@
                         <a href="https://github.com/zaynejaz/react-calculator" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://zaynejaz.github.io/currency-converter/" class="projectLink" target="_blank" rel="noopener noreferer">Currency Converter</a>
+                        <a href="https://github.com/zaynejaz/currency-converter" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
