added crypto price tracker

--- a/index.html
+++ b/index.html
@@ -1753,8 +1753,8 @@
                         <a href="https://github.com/zaynejaz/currency-converter" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://react-next-crypto-price-tracker.vercel.app/" class="projectLink" target="_blank" rel="noopener noreferer"></a>
+                        <a href="https://github.com/zaynejaz/react-next-crypto-price-tracker" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
