--- a/index.html
+++ b/index.html
@@ -1725,15 +1725,15 @@
                         <a href="https://github.com/zaynejaz/bk-tictactoe" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="https://ze-webapps.netlify.app/js%20web%20app-weather%20app%20-%20wthr/wthr" class="projectLink" target="_blank" rel="noopener noreferer">WHTR</a>
+                        <a href="https://ze-webapps.netlify.app/js%20web%20app-weather%20app%20-%20wthr/wthr" class="projectLink" target="_blank" rel="noopener noreferer">Weather App</a>
                         <a href="https://github.com/zaynejaz/WebApps/tree/master/JS%20Web%20App-Weather%20App%20-%20WTHR" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="https://ze-webapps.netlify.app/js%20web%20app-quiz%20app%20-%20kwizzr/kwizzr" class="projectLink" target="_blank" rel="noopener noreferer">KWIZZR</a>
+                        <a href="https://ze-webapps.netlify.app/js%20web%20app-quiz%20app%20-%20kwizzr/kwizzr" class="projectLink" target="_blank" rel="noopener noreferer">Quiz App</a>
                         <a href="https://github.com/zaynejaz/WebApps/tree/master/JS%20Web%20App-Quiz%20App%20-%20KWIZZR" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="https://ze-webapps.netlify.app/js%20web%20app-text%20analyzer%20-%20searcher/searcher" class="projectLink" target="_blank" rel="noopener noreferer">SearchR</a>
+                        <a href="https://ze-webapps.netlify.app/js%20web%20app-text%20analyzer%20-%20searcher/searcher" class="projectLink" target="_blank" rel="noopener noreferer">Book Library</a>
                         <a href="https://github.com/zaynejaz/WebApps/tree/master/JS%20Web%20App-Text%20Analyzer%20-%20SEARCHER" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
@@ -1741,7 +1741,7 @@
                         <a href="https://github.com/zaynejaz/react-budget-tracker" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="https://zaynejaz.github.io/react-todo-list-app/" class="projectLink" target="_blank" rel="noopener noreferer">To-Do List</a>
+                        <a href="https://zaynejaz.github.io/react-todo-list-app/" class="projectLink" target="_blank" rel="noopener noreferer">To Do List</a>
                         <a href="https://github.com/zaynejaz/react-todo-list-app" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
@@ -1757,8 +1757,8 @@
                         <a href="https://github.com/zaynejaz/react-next-crypto-price-tracker" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://ze-qrcode.netlify.app/" class="projectLink" target="_blank" rel="noopener noreferer">QR Code Generator</a>
+                        <a href="https://github.com/zaynejaz/react-qrcode" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
