--- a/index.html
+++ b/index.html
@@ -1761,8 +1761,8 @@
                         <a href="https://github.com/zaynejaz/react-qrcode" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="https://ze-hyperion.netlify.app/" class="projectLink" target="_blank" rel="noopener noreferer">Web 3.0 Blockchain App</a>
+                        <a href="https://github.com/zaynejaz/react-blockchain-app" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
