--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             multiModal.show( "#modal-lp" );
             projectModalActive();
         }
-        function modalCamp() {
-            multiModal.show( "#modal-camp" );
-            projectModalActive();
-        }
+        // function modalCamp() {
+        //     multiModal.show( "#modal-camp" );
+        //     projectModalActive();
+        // }
         function modalPwa() {
             multiModal.show( "#modal-pwa" );
             projectModalActive();
@@ -1688,7 +1688,7 @@
         </div>
     </section>
 
-    <section id="modal-camp" class="multiModal-popup">
+    <!-- <section id="modal-camp" class="multiModal-popup">
         <div class="modal-content">
 
             <div class="modal-header">
@@ -1706,7 +1706,7 @@
                 <h6>Email Campaigns<br>with a focus on CTOR</h6>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section id="modal-pwa" class="multiModal-popup">
         <div class="modal-content">
@@ -1764,10 +1764,10 @@
                         <a href="https://ze-hyperion.netlify.app/" class="projectLink" target="_blank" rel="noopener noreferer">Web 3.0 Blockchain App</a>
                         <a href="https://github.com/zaynejaz/react-blockchain-app" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
                         <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <div class="modal-footer">
