added landing pages

--- a/index.html
+++ b/index.html
@@ -1680,6 +1680,22 @@
                         <a href="https://ze-theemailcompany.netlify.app/" class="projectLink" target="_blank" rel="noopener noreferer">The Email Company</a>
                         <a href="https://github.com/zaynejaz/nextjs_landing_page" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
+                    <li>
+                        <a href="ze-gpt3.netlify.app" class="projectLink" target="_blank" rel="noopener noreferer">GPT-3</a>
+                        <a href="https://github.com/zaynejaz/react-lp-gpt3" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                    </li>
+                    <li>
+                        <a href="https://the-alpha-agency.vercel.app/" class="projectLink" target="_blank" rel="noopener noreferer">The Alpha Agency</a>
+                        <a href="https://github.com/zaynejaz/react-agency-a" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                    </li>
+                    <li>
+                        <a href="https://the-beta-agency.vercel.app/" class="projectLink" target="_blank" rel="noopener noreferer">The Beta Agency</a>
+                        <a href="https://github.com/zaynejaz/react-agency-b" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                    </li>
+                    <!-- <li>
+                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
+                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                    </li> -->
                 </ul>
             </div>
             <div class="modal-footer">
