--- a/index.html
+++ b/index.html
@@ -712,9 +712,9 @@
                     <li>
                         <a href="javascript:void(0)" id="open-lp" class="projectLink" onclick="modalLP();"">Landing Pages</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="javascript:void(0)" id="open-camp" class="projectLink" onclick="modalCamp();"">Email Campaigns</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="javascript:void(0)" id="open-webapp" class="projectLink" onclick="modalPwa();"">Progressive Web Apps</a>
                     </li>
@@ -1681,7 +1681,7 @@
                         <a href="https://github.com/zaynejaz/nextjs_landing_page" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="ze-gpt3.netlify.app" class="projectLink" target="_blank" rel="noopener noreferer">GPT-3</a>
+                        <a href="https://ze-gpt3.netlify.app" class="projectLink" target="_blank" rel="noopener noreferer">GPT-3</a>
                         <a href="https://github.com/zaynejaz/react-lp-gpt3" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
@@ -1736,10 +1736,10 @@
                         <a href="https://zaynejaz.github.io/randomQuoteGenerator/" class="projectLink" target="_blank" rel="noopener noreferer">Random Quote Generator</a>
                         <a href="https://github.com/zaynejaz/randomQuoteGenerator" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="#" class="projectLink" target="_blank" rel="noopener noreferer">Tic Tac Toe</a>
                         <a href="https://github.com/zaynejaz/bk-tictactoe" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="https://ze-webapps.netlify.app/js%20web%20app-weather%20app%20-%20wthr/wthr" class="projectLink" target="_blank" rel="noopener noreferer">Weather App</a>
                         <a href="https://github.com/zaynejaz/WebApps/tree/master/JS%20Web%20App-Weather%20App%20-%20WTHR" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
@@ -1769,7 +1769,7 @@
                         <a href="https://github.com/zaynejaz/currency-converter" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
-                        <a href="https://react-next-crypto-price-tracker.vercel.app/" class="projectLink" target="_blank" rel="noopener noreferer"></a>
+                        <a href="https://react-next-crypto-price-tracker.vercel.app/" class="projectLink" target="_blank" rel="noopener noreferer">Crypto Price Tracker</a>
                         <a href="https://github.com/zaynejaz/react-next-crypto-price-tracker" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
                     <li>
