added gamma agency LP

--- a/index.html
+++ b/index.html
@@ -1692,6 +1692,10 @@
                         <a href="https://the-beta-agency.vercel.app/" class="projectLink" target="_blank" rel="noopener noreferer">The Beta Agency</a>
                         <a href="https://github.com/zaynejaz/react-agency-b" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
+                    <li>
+                        <a href="https://the-gamma-agency.vercel.app/" class="projectLink" target="_blank" rel="noopener noreferer">The Gamma Agency</a>
+                        <a href="https://github.com/zaynejaz/react-agency-c" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                    </li>
                     <!-- <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
                         <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
