added landing page

--- a/index.html
+++ b/index.html
@@ -1700,23 +1700,23 @@
                         <a href="https://le-creative.vercel.app" class="projectLink" target="_blank" rel="noopener noreferer">Le Creative</a>
                         <a href="https://github.com/zaynejaz/react-lp-creative" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
-                    <!-- <li>
-                        <a href="https://la-digital.vercel.app" class="projectLink" target="_blank" rel="noopener noreferer">La Digital</a>
+                    <li>
+                        <a href="https://la-digital.vercel.app/" class="projectLink" target="_blank" rel="noopener noreferer">La Digital</a>
                         <a href="https://github.com/zaynejaz/react-lp-digital" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
                         <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <li>
+                    </li> -->
+                    <!-- <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
                         <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <li>
+                    </li> -->
+                    <!-- <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
                         <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <li>
+                    </li> -->
+                    <!-- <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
                         <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li> -->
